--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,6 +30,9 @@ services:
       HASURA_GRAPHQL_ADMIN_SECRET: myadminsecretkey
       HASURA_GRAPHQL_UNAUTHORIZED_ROLE: guest
       HASURA_GRAPHQL_JWT_SECRET: '{"type": "HS256", "key": "9PC62hi1eXCt5RJ2lNeV3fTYLBeywbf7"}'
+      HASURA_ACTIONS_ENDPOINT: http://host.docker.internal:8888/.netlify/functions
+      HASURA_FISHSTACK_SECRET: mysecretkey
 volumes:
   db_data:
-
+# HASURA_FISHSTACK_SECRET
+# mysecretkey
