--- a/metadata/databases/default/tables/tables.yaml
+++ b/metadata/databases/default/tables/tables.yaml
@@ -1,3 +1,8 @@
 - "!include public_admin.yaml"
 - "!include public_categories.yaml"
+- "!include public_last_week_orders.yaml"
 - "!include public_menu.yaml"
+- "!include public_order_status.yaml"
+- "!include public_orders.yaml"
+- "!include public_orders_menu.yaml"
+- "!include public_settings.yaml"
