add hasura update-cli for deploy yml

--- a/.github/workflows/deploy-hasura.yml
+++ b/.github/workflows/deploy-hasura.yml
@@ -12,6 +12,7 @@ jobs:
       - name: Install 🔧
         run: |
           npm install
+          npx hasura update-cli
 
       - name: Deploy 🚀
         run: |
