add customers section

--- a/metadata/databases/default/tables/public_categories.yaml
+++ b/metadata/databases/default/tables/public_categories.yaml
@@ -19,3 +19,10 @@ select_permissions:
         - title
         - id
       filter: {}
+  - role: user
+    permission:
+      columns:
+        - slug
+        - title
+        - id
+      filter: {}
