--- a/metadata/actions.yaml
+++ b/metadata/actions.yaml
@@ -28,6 +28,28 @@ actions:
       handler: '{{HASURA_ACTIONS_ENDPOINT}}/cloud-signature'
       forward_client_headers: true
     comment: Cloudinary signature
+  - name: customerLogin
+    definition:
+      kind: ""
+      handler: '{{HASURA_ACTIONS_ENDPOINT}}/customer-login'
+      forward_client_headers: true
+      headers:
+        - name: x-fishstack-secret-key
+          value_from_env: HASURA_FISHSTACK_SECRET
+    permissions:
+      - role: guest
+    comment: Customer login
+  - name: customerVerifyCode
+    definition:
+      kind: ""
+      handler: '{{HASURA_ACTIONS_ENDPOINT}}/customer-verify-code'
+      forward_client_headers: true
+      headers:
+        - name: x-fishstack-secret-key
+          value_from_env: HASURA_FISHSTACK_SECRET
+    permissions:
+      - role: guest
+    comment: Customer verify code
 custom_types:
   enums: []
   input_objects:
@@ -36,6 +58,8 @@ custom_types:
     - name: CustomerLoginInput
     - name: CustomerVerifyCodeInput
     - name: CreateOrderInput
+    - name: customerLoginInput
+    - name: customerVerifyCodeInput
   objects:
     - name: AdminRegisterOutput
     - name: AdminLoginOutput
@@ -44,4 +68,6 @@ custom_types:
     - name: CustomerLoginOutput
     - name: CustomerVerifyCodeOutput
     - name: CreateOrderOutput
+    - name: customerLoginOutput
+    - name: customerVerifyCodeOutput
   scalars: []
