--- a/metadata/databases/default/tables/public_menu.yaml
+++ b/metadata/databases/default/tables/public_menu.yaml
@@ -23,3 +23,14 @@ select_permissions:
         - title
         - weight
       filter: {}
+  - role: user
+    permission:
+      columns:
+        - price
+        - weight
+        - descriptions
+        - image
+        - title
+        - category_id
+        - id
+      filter: {}
