--- a/metadata/databases/default/tables/public_customers.yaml
+++ b/metadata/databases/default/tables/public_customers.yaml
@@ -12,3 +12,13 @@ select_permissions:
       filter:
         id:
           _eq: X-Hasura-User-Id
+update_permissions:
+  - role: user
+    permission:
+      columns:
+        - address
+        - name
+      filter:
+        id:
+          _eq: X-Hasura-User-Id
+      check: null
