--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,5 +33,6 @@ services:
       HASURA_ACTIONS_ENDPOINT: http://host.docker.internal:8888/.netlify/functions
       HASURA_FISHSTACK_SECRET: mysecretkey
       HASURA_FAKE_ORDERS_FORCE_CREATE: 'true'
+      HASURA_EVENT_WEBHOOK_HANDLER: http://host.docker.internal:8888/.netlify/functions/hasura-webhook
 volumes:
   db_data:
