--- a/metadata/databases/default/tables/public_order_status.yaml
+++ b/metadata/databases/default/tables/public_order_status.yaml
@@ -10,3 +10,10 @@ array_relationships:
         table:
           name: orders
           schema: public
+select_permissions:
+  - role: user
+    permission:
+      columns:
+        - id
+        - label
+      filter: {}
