--- a/metadata/databases/default/tables/public_orders_menu.yaml
+++ b/metadata/databases/default/tables/public_orders_menu.yaml
@@ -11,3 +11,25 @@ object_relationships:
         remote_table:
           name: menu
           schema: public
+  - name: order
+    using:
+      manual_configuration:
+        column_mapping:
+          order_id: id
+        insertion_order: null
+        remote_table:
+          name: orders
+          schema: public
+select_permissions:
+  - role: user
+    permission:
+      columns:
+        - id
+        - order_id
+        - menu_id
+        - amount
+      filter:
+        order:
+          customer:
+            id:
+              _eq: X-Hasura-User-Id
