--- a/metadata/actions.yaml
+++ b/metadata/actions.yaml
@@ -32,6 +32,7 @@ actions:
     definition:
       kind: synchronous
       handler: '{{HASURA_ACTIONS_ENDPOINT}}/create-order'
+      forward_client_headers: true
       headers:
         - name: x-fishstack-secret-key
           value_from_env: HASURA_FISHSTACK_SECRET
