--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hasura",
   "version": "0.1.0",
   "scripts": {
-    "start": "hasura console --admin-secret myadminsecretkey --skip-update-check"
+    "start": "hasura console --admin-secret myadminsecretkey"
   },
   "license": "ISC",
   "devDependencies": {
