--- a/metadata/databases/default/tables/public_payment_status.yaml
+++ b/metadata/databases/default/tables/public_payment_status.yaml
@@ -2,6 +2,14 @@ table:
   name: payment_status
   schema: public
 is_enum: true
+array_relationships:
+  - name: orders
+    using:
+      foreign_key_constraint_on:
+        column: payment_status
+        table:
+          name: orders
+          schema: public
 select_permissions:
   - role: user
     permission:
