--- a/metadata/databases/default/tables/public_payment_types.yaml
+++ b/metadata/databases/default/tables/public_payment_types.yaml
@@ -2,3 +2,11 @@ table:
   name: payment_types
   schema: public
 is_enum: true
+array_relationships:
+  - name: orders
+    using:
+      foreign_key_constraint_on:
+        column: payment_type
+        table:
+          name: orders
+          schema: public
